[package]
name = "currency"
version = "0.1.0"
authors = ["David Heidelberg <david@ixit.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
